migration_log.txt
/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/database/run-migrate.ts(2,27): error TS2307: Cannot find module '../app.module' or its corresponding type declarations.
src/database/run-migrate.ts(3,33): error TS2307: Cannot find module '../modules/products/products.service' or its corresponding type declarations.
src/database/run-migrate.ts(5,26): error TS2307: Cannot find module '../entities/category.entity' or its corresponding type declarations.
src/database/run-migrate.ts(6,24): error TS2307: Cannot find module '../entities/branch.entity' or its corresponding type declarations.
src/database/run-migrate.ts(42,25): error TS18046: 'lookupData' is of type 'unknown'.
src/database/run-migrate.ts(67,21): error TS18046: 'stockData' is of type 'unknown'.
src/database/run-migrate.ts(71,20): error TS18046: 'stockData' is of type 'unknown'.
src/database/run-migrate.ts(71,44): error TS18046: 'stockData' is of type 'unknown'.

    at createTSError (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Object.require.extensions.<computed> [as .ts] (/root/.npm/_npx/1bf7c3c15bf47d04/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Function.Module._load (node:internal/modules/cjs/loader:1091:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12) {
  diagnosticCodes: [
     2307,  2307,
     2307,  2307,
    18046, 18046,
    18046, 18046
  ]
}
